# cdf-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  test.yml
benches/: bench_cdf.rs
examples/: profile_cdf.rs  to_json.rs
src/: cdf.rs  decode.rs  error.rs  impls.rs  lib.rs  record.rs  repr.rs  traits.rs  types.rs
src/record/: adr.rs  agredr.rs  azedr.rs  ccr.rs  cdr.rs  collection.rs  cpr.rs  cvvr.rs  gdr.rs  rvdr.rs  spr.rs  uir.rs  vvr.rs  vxr.rs  zvdr.rs
