[package]
name = "cdf"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Rust library for decoding and encoding NASA CDF files."
readme = "README.md"
repository = "https://github.com/ysar/cdf-rs.git"
exclude = ["examples/*", "benches/*", "tests/*", ".github/*"]
keywords = ["CDF"]
categories = ["encoding"]

[dev-dependencies]
paste = "1.0.15"
serde_json = "1.0.148"
criterion = "0.5.1"

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }

[profile.release]
debug = true

[[bench]]
name = "bench_cdf"
harness = false
